--- a/Entrega2/css/styles.css
+++ b/Entrega2/css/styles.css
@@ -374,6 +374,49 @@
 /*Fin carruseles*/
 
 
+/* 4 en linea*/
+
+/*contenedor de la info sobre la visualizacion del juego*/
+.cont-texto-4enlinea{
+  width: 1350px;
+  height: 80px;
+  background-color: #b0b0b0;
+}
+/*seguimiento de navegacion*/
+.seguimiento-list{
+  display: flex;
+  flex-direction: row;
+}
+
+/*contenido principal*/
+.container-juego {
+  width: 1350px;
+  height: 620px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.publicidad {
+  width: 235px;
+  height: 620px;
+  background-color: #484848;
+
+}
+/*Donde se va a visualizar el 4 en linea*/
+.cont-4enlinea {
+  width: 880px;
+  height: 620px;
+}
+.juego-image { 
+  height: 100%;
+  width: 100%;
+  filter: blur(5px);
+}
+
+
+
+
+
 /*Breakpoint Desktop*/
   @media (min-width: 1024px) {
 
