--- a/Entrega2/css/styles.css
+++ b/Entrega2/css/styles.css
@@ -419,9 +419,27 @@
   justify-content: center;
   flex-direction: column;
 }
-/*contenido debajo de la visualizacion dell juego*/
+/*Contenido debajo de la visualizacion del juego*/
 
 /*boton con el que clickeo y me abre la seccion de compartir*/
+.open-compartir-btn {
+  background-color: #5D3FD3; /* Color primario del botón */
+  color: white;
+  border: none;
+  font-family: 'Roboto', 'Condensed ExtraBold', sans-serif;
+  font-weight: 800;
+  font-size: 12px;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 6px;
+  width: 140px;
+  height: 39px;
+}
+
 .cont-compartir{
   width: 1000px;
   height: 55px;
@@ -433,14 +451,61 @@
   visibility: hidden;
   width: 518px;
   height: 466px;
+  background-color: #484848;
+  justify-content: center;
+  align-items: center;
 }
+.info-compartir h3{
+  width: 518px;
+  height: 47px;
+}
+
+/*cuando aprieto compartir*/
 .info-compartir.visible {
   opacity: 1;
   visibility: visible;
   transition: opacity 0.3s ease, visibility 0s 0s;
   z-index: 50;
 }
+.cont-iconos-compartir{
+  width: 470px;
+  height: 202px;
+  display: flex;
+  justify-content: space-around;
+  margin: 15px 0;
+}
 
+/*input donde va a estar el link del juego*/
+.cont-link{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px;
+  border-radius: 5px;
+  width: 470px;
+  height: 53px;
+  background-color: #2C2C2C;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.cont-link input {
+  border: none;
+  background: none;
+  color: white;
+  width: 80%;
+  font-size: 14px;
+}
+
+
+.copy-btn{
+  background-color: #7d3cff;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
 .como-jugar {
   width: 1000px;
   height: 210px;
