--- a/Entrega2/css/styles.css
+++ b/Entrega2/css/styles.css
@@ -381,9 +381,11 @@
   width: 1350px;
   height: 80px; 
 }
+
+
 .cont-texto-4enlinea h2{
   font-family: 'Roboto', 'Condensed ExtraBold', sans-serif;
- /* font-weight: 800;*/
+  margin-top: 20px;
   transition: background-color 0.3s ease;
   color: #9747FF ;
 }
@@ -392,10 +394,10 @@
 }
 /*seguimiento de navegacion*/
 .seguimiento-list{
+  margin-top: 10px;
   display: flex;
   flex-direction: row;
-  list-style: none;
-  
+  list-style: none;  
 }
 
 /*contenido principal*/
@@ -405,6 +407,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-top: 10px;
 }
 .publicidad {
   width: 235px;
@@ -473,10 +476,15 @@
   background-color: #484848;
   justify-content: center;
   align-items: center;
+  border-radius: 10px;
 }
 .info-compartir h3{
   width: 518px;
   height: 47px;
+  text-align: center;
+  font-family: 'Roboto', 'Condensed ExtraBold', sans-serif;
+  font: 30px;
+  color: #FFFFFF;
 }
 
 /*cuando aprieto compartir*/
@@ -513,6 +521,7 @@
   color: white;
   width: 80%;
   font-size: 14px;
+  text-align: center;
 }
 
 
@@ -521,9 +530,10 @@
   color: white;
   border: none;
   padding: 5px 10px;
-  border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s;
+  border-radius: 20px;
+  margin: 5px;
 }
 .como-jugar {
   width: 1000px;
@@ -544,7 +554,6 @@
   margin: 10px;
 }
 
-
 .cont-gameplays {
   width: 1000px;
   height: 210px;
@@ -555,6 +564,41 @@
   font-family: 'Roboto', 'Condensed ExtraBold', sans-serif;
   color: #FFFFFF;
   margin: 10px;
+}
+.gameplays-img{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.gameplays-img .gameplay-image {
+  width: 200px;
+  height: 110px;
+}
+.cont-comentarios{
+  width: 1000px;
+  height: 210px;
+}
+.cont-comentarios h3{
+
+  padding-bottom: 10px;
+  font-family: 'Roboto', 'Condensed ExtraBold', sans-serif;
+  color: #FFFFFF;
+  margin: 10px;
+}
+.cont-comentarios p{
+  font-family: 'Roboto', 'Condensed ExtraBold', sans-serif;
+  transition: background-color 0.3s ease;
+  font-size: 12px;
+  color: #FFFFFF;
+  margin-top: 10px; 
+  margin-left: 10px;
+}
+
+.comentario {
+  width: 858px;
+  height: 172px;
+  background-color: #686868;
+  margin-top: 30px;
 }
 
 
