--- a/Entrega2/css/styles.css
+++ b/Entrega2/css/styles.css
@@ -167,6 +167,10 @@
   transition: transform 0.3s ease;
 }
 
+.game-card a {
+  text-decoration: none;
+}
+
 /* Imagen del juego */
 .game-image {
   width: 100%;
