--- a/Entrega2/css/styles.css
+++ b/Entrega2/css/styles.css
@@ -380,6 +380,14 @@
 .cont-texto-4enlinea{
   width: 1350px;
   height: 80px; 
+  display: flex;
+}
+.cont-texto-4enlinea img{
+  margin: 5px;
+  margin-right: 10px;
+  margin-top: 10px;
+  width: 68px;
+  height: 68px;
 }
 
 
@@ -499,8 +507,15 @@
   height: 202px;
   display: flex;
   justify-content: space-around;
-  margin: 15px 0;
+  margin: 10px;
   flex-direction: row;
+  margin-top: 60px;
+}
+.cont-iconosYtitulo{
+  text-align: center;
+  font-family: 'Roboto', 'Regular', sans-serif;
+  font-size: 12px;
+  color: #FFFFFF;
 }
 
 /*input donde va a estar el link del juego*/
@@ -601,6 +616,15 @@
   height: 172px;
   background-color: #686868;
   margin-top: 30px;
+}
+.titulo-comentario{
+  font-family: 'Roboto', 'Bold', sans-serif;
+  transition: background-color 0.3s ease;
+  color: #FFFFFF;
+  padding: 20px;
+  font-size: 18px ;
+  height: 47px;
+
 }
 
 
