--- a/Entrega2/css/styles.css
+++ b/Entrega2/css/styles.css
@@ -563,6 +563,7 @@
   margin-left: 10px;
 }
 .titulo-como-jugar{
+  display: flex;
   border-bottom: 2px solid #FFFFFF;
   padding-bottom: 10px;
   font-family: 'Roboto', 'Condensed ExtraBold', sans-serif;
@@ -570,11 +571,13 @@
   margin: 10px;
 }
 
+
 .cont-gameplays {
   width: 1000px;
   height: 210px;
 }
 .titulo-gameplays{
+  display: flex;
   border-bottom: 2px solid #FFFFFF;
   padding-bottom: 10px;
   font-family: 'Roboto', 'Condensed ExtraBold', sans-serif;
