--- a/Entrega2/css/styles.css
+++ b/Entrega2/css/styles.css
@@ -14,7 +14,6 @@
   /*Comienzo nav*/
   .navbar {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     background-color: #59595B;
     padding: 10px;
@@ -93,6 +92,7 @@
 
 
   .search-container {
+    margin: auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -139,6 +139,7 @@
     align-items: center;
     color: #ff6e6e;
     text-align: right;
+    margin-left: 2rem;
   }
   
   .logo img {
@@ -161,7 +162,7 @@
   position: relative;
   width: 230px; /* Ajusta según tu diseño */
   height: 150px;
-  overflow: hidden;
+  overflow: visible;
   border-radius: 15px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   transition: transform 0.3s ease;
@@ -182,7 +183,7 @@
 
 /* Efecto de desenfoque al hacer hover en la card */
 .game-card:hover .game-image {
-  filter: blur(3px); /* Aplica un desenfoque */
+  filter: blur(1px); /* Aplica un desenfoque */
 }
 
 /* Overlay que aparece al hacer hover */
@@ -207,23 +208,7 @@
 }
 
 /* Posiciona el título del juego en la parte superior */
-.hover-overlay h2 {
-  position: absolute;
-  font-family: "Bungee";
-  color: #FFFFFF;
-  top: 0;
-  left: 0;
-  width: 100%;
-  letter-spacing: 1px;
-  font-weight: lighter;
-  text-align: center;
-  background-color: #7c7c7db7; /* Fondo semitransparente */
-  padding: 6px;
-  margin: 0;
-  font-size: 12px;
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
-}
+
 
 /* Botón de play */
 .play-button {
@@ -233,41 +218,30 @@
   padding: 10px 20px;
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: 800;
-  font-size: 12px;
-  border-radius: 20px;
+  font-size: 14px;
+  border-radius: 15px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  text-align: center;
   gap: 6px;
   width: 140px;
   height: 39px;
 }
 
-.play-button span{
-  position: relative;
-  left: 15%;
-}
 
-.play-button i{
-  font-size: 16px;
-  color: #2C2C2C;
-  position: absolute;
-  left: 30%;
-}
+
 
 .play-button:hover {
   background-color: #9747FF; /* Color de hover */
 }
 
-.cart-price-section {
+/*.cart-price-section {
   position: absolute;
-  bottom: 0; /* Posiciona el carrito y el precio en la parte inferior */
+  bottom: 0; 
   width: 100%;
   display: flex;
   justify-content: space-between;
-}
+}*/
 
 /* Icono del carrito */
 .cart-icon {
@@ -288,19 +262,23 @@
 /* Precio */
 .price-tag {
   position: absolute;
-  bottom: 0;
-  right: 0;
+  top: 29px;
+  left:-8px;
   height: 33px;
   width: 33px;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgba(151, 71, 255, 0.77);
   color: white;
   border-radius: 12px 0 12px 0;
   font-size: 13px;
   font-family: 'Bungee';
   text-align: center;
+}
+
+.price-tag span{
+  position: absolute;
+  font-size: 12px;
 }
 
 
@@ -311,17 +289,34 @@
 
   .carruseles{
     display: flex;
-    align-items: center;
-    justify-content: center;
     flex-direction: column;
+    gap: 3rem;
+  }
+  
+
+
+  .carousel h2{
+    font-family: 'Roboto';
+    color: #D9D9D9;
+    margin-left: 2rem;
   }
 
-  .carousel{
+  .hover-overlay h2 {
+    position: absolute;
+    font-family: "Bungee";
+    color: #FFFFFF;
+    top: 0;
+    left: 0;
     width: 100%;
+    letter-spacing: 1px;
+    font-weight: lighter;
     text-align: center;
-    font-family: 'Bungee';
-    color: #1ABC9C;
-    margin: auto;
+    background-color: #7c7c7db7; /* Fondo semitransparente */
+    padding: 6px;
+    margin: 0;
+    font-size: 12px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
   }
 
   .carousel-list{
@@ -329,18 +324,15 @@
     display: flex;
     overflow: hidden;
     align-items: center;
-    width: fit-content;
     height: 150px;
     gap: 1rem;
-    margin: auto;
   }
 
   .carousel-track{
     position: relative;
     display: flex;
-    max-width: 70vw;
     align-items: center;
-    width: 100%;
+    width: auto;
     top: 0;
     gap: .5rem;
     transition: left .5s ease;
@@ -348,15 +340,15 @@
 
 
   .carrusel-arrow{
-    border-radius: 20px;
-    background-color: #5D3FD3;
+    background-color: #5d3fd38d;
     z-index: 4;
     width: 30px;
-    height: 30px;
+    height: 150px;
     text-align: center;
     border: 0;
     cursor: pointer;
-    
+    position: absolute;
+    transition: .1s;
   }
 
   .carrusel-arrow:focus{
@@ -364,16 +356,21 @@
   }
 
   .carrusel-arrow svg{
-    width: 9px;
+    width: 12px;
     height: 100%;
     color: #FFFFFF;
   }
 
+  .carrusel-arrow > svg:hover{
+    transform: scale(1.5);
+    transition: ease .1s;
+  }
+
   .carrusel-prev{
-    left: 15rem;
+    left: 0;
   }
   .carrusel-next{
-    right: 15rem;
+    right: 0;
   }
 /*Fin carruseles*/
 
@@ -607,6 +604,9 @@
   margin-top: 30px;
 }
 
+.invisible{
+  display: none;
+}
 
 
 /*Breakpoint Desktop*/
@@ -634,7 +634,7 @@
       font-family: "bungee";
       color: #1ABC9C;
       top: 60px;
-      right: 9rem;
+      right: 2rem;
       padding: 2rem;
       gap: 1rem;
       transition: opacity 0.3s ease, visibility 0s 0.3s;
@@ -651,7 +651,7 @@
       justify-content: center;
       position: absolute;
       border-radius: 20px;
-      right: 9rem;
+      right: 2rem;
       width: 40px;
       height: 40px;
       background-color: #5D3FD3;
@@ -666,12 +666,13 @@
       color:#2EE6B6;
       transition: ease-in .2s;
     }
-
-    .carousel{
-      margin: 0px 60px;
+    .carruseles{
+      margin-top: 4rem;
     }
-
     .carousel-list{
-      max-width: 80vw;
+      max-width: 100vw;
+    }
+    .carousel-track{
+      gap: 12px;
     }
   }
