4 en linea casi listo

--- a/Entrega3/css/styles.css
+++ b/Entrega3/css/styles.css
@@ -8,8 +8,8 @@
   body {
     font-family: Arial, sans-serif;
     background: linear-gradient(180deg, #2C2C2C 0%, #484848 100%);
-    height: 100vh;
     font-family: 'Roboto', sans-serif;
+    background-size: contain;
   }
   /*Comienzo nav*/
   .navbar {
@@ -235,29 +235,26 @@
   background-color: #9747FF; /* Color de hover */
 }
 
-/*.cart-price-section {
-  position: absolute;
-  bottom: 0; 
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-}*/
 
 /* Icono del carrito */
 .cart-icon {
   display: flex;
   align-items: center;
   justify-content: center;
+  position: absolute;
   bottom: 0;
+  right: 0;
   width: 39px;
   height: 39px;
-  border-radius: 15px;
-  background-color: rgba(151, 71, 255, 0.77);
+  border-radius: 10px 0px 15px 0;
+  background-color: #686868;
   font-size: 20px;
 }
 .cart-icon i{
   margin-right: 5px;
 }
+
+
 /* Precio */
 .price-tag {
   position: absolute;
@@ -388,6 +385,7 @@
   margin-top: 10px;
   width: 68px;
   height: 68px;
+  border-radius: 10px;
 }
 
 
@@ -406,6 +404,11 @@
   display: flex;
   flex-direction: row;
   list-style: none;  
+}
+
+.seguimiento-list li a{
+  text-decoration: none;
+  color: #9747FF;
 }
 
 /*contenido principal*/
@@ -427,6 +430,7 @@
 .cont-4enlinea {
   width: 880px;
   height: 620px;
+  overflow: hidden;
 }
 .juego-image { 
   height: 100%;
@@ -459,61 +463,89 @@
   gap: 6px;
   width: 140px;
   height: 39px;
-  margin-top: 5px;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+  z-index: 30;
 }
+
 .open-compartir-btn:hover{
   background-color: #E684FF;
-  transform: translateY(-3px);
 }
 
 /*boton cerrar  compaetir*/
 .close-compartir-btn{
+  float: right;
+  margin-right: 1rem;
   color: #FFFFFF;
   background: none;
   font-family: 'Bungee';
   font-size: 14px;
-
+  border: none;
 }
 .cont-compartir{
-  width: 1000px;
-  height: 55px;
+  width: 518px;
+  height: 466px;
+  z-index: 29;
   display: flex;
+  position: fixed;
   justify-content: center;
   align-items: center;
+  top:50%;
+  left:50%;
+  /*transform: translate(-500%, -500%);*/
 }
+
+.cont-compartir.visible{
+  transform: translate(-50%, -50%);
+}
+
 .info-compartir{
   visibility: hidden;
+  z-index: 29;
   width: 518px;
   height: 466px;
   background-color: #484848;
   justify-content: center;
   align-items: center;
-  border-radius: 10px;
+  border-radius: 20px;
+
 }
-.info-compartir h3{
-  width: 518px;
-  height: 47px;
-  text-align: center;
-  font-family: 'Roboto', 'Condensed ExtraBold', sans-serif;
-  font: 30px;
+.info-compartir h2{
+  font-size: 30;
   color: #FFFFFF;
+  text-align: center;
+  font-family: 'Bungee';
+  font-weight: 400;
+  cursor: pointer;
+}
+
+.close-compartir-btn h2{
+  margin-top: 5px;
+  cursor: pointer;
+}
+.close-compartir-btn h2:hover{
+  color: #FABBF2;
+}
+
+.compartirtext{
+  margin-top: 3rem;
 }
 
 /*cuando aprieto compartir*/
 .info-compartir.visible {
   opacity: 1;
+  z-index: 33;
   visibility: visible;
   transition: opacity 0.3s ease, visibility 0s 0s;
-  z-index: 50;
 }
 .cont-iconos-compartir{
-  width: 470px;
+  width: 100%;
   height: 202px;
   display: flex;
-  justify-content: space-around;
-  margin: 10px;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
   flex-direction: row;
-  margin-top: 60px;
 }
 .cont-iconosYtitulo{
   text-align: center;
@@ -532,7 +564,8 @@
   align-items: center;
   justify-content: space-between;
   padding: 5px;
-  border-radius: 5px;
+  border-radius: 12px;
+  border: 1px solid #E1DEDE;
   width: 470px;
   height: 53px;
   background-color: #2C2C2C;
@@ -540,14 +573,22 @@
   margin-right: 20px;
 }
 .cont-link input {
-  border: none;
   background: none;
+  border:none;
   color: white;
   width: 80%;
   font-size: 14px;
   text-align: center;
+  outline: none;
 }
 
+.linea-blanca{
+  width: 400px;
+  margin: auto;
+}
+.mt{
+  margin-top: 4rem;
+}
 
 .copy-btn{
   background-color: #7d3cff;
@@ -561,12 +602,11 @@
 }
 .como-jugar {
   width: 1000px;
-  height: 210px;
 }
 .como-jugar p{
   font-family: 'Roboto', 'Condensed ExtraBold', sans-serif;
   transition: background-color 0.3s ease;
-  font-size: 14px;
+  font-size: 16px;
   color: #FFFFFF; 
   margin-left: 10px;
 }
@@ -576,13 +616,19 @@
   padding-bottom: 10px;
   font-family: 'Roboto', 'Condensed ExtraBold', sans-serif;
   color: #FFFFFF;
-  margin: 10px;
+  margin-bottom: 1rem;
+}
+
+.titulo-como-jugar h3, .titulo-gameplays h3{
+  margin-left: .5rem;
+  margin-top: 3px;
+  font-size: 22px;
 }
 
 
 .cont-gameplays {
   width: 1000px;
-  height: 210px;
+  margin-top: 4rem;
 }
 .titulo-gameplays{
   display: flex;
@@ -590,58 +636,166 @@
   padding-bottom: 10px;
   font-family: 'Roboto', 'Condensed ExtraBold', sans-serif;
   color: #FFFFFF;
-  margin: 10px;
+  margin-bottom: 1rem;
 }
 .gameplays-img{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-
 }
 .gameplays-img .gameplay-image {
   width: 200px;
   height: 110px;
-}
-.cont-comentarios{
-  width: 1000px;
-  height: 210px;
-}
-.cont-comentarios h3{
-
-  padding-bottom: 10px;
-  font-family: 'Roboto', 'Condensed ExtraBold', sans-serif;
-  color: #FFFFFF;
-  margin: 10px;
-}
-.cont-comentarios p{
-  font-family: 'Roboto', 'Condensed ExtraBold', sans-serif;
-  transition: background-color 0.3s ease;
-  font-size: 12px;
-  color: #FFFFFF;
-  margin-top: 10px; 
-  margin-left: 10px;
+  border-radius: 12px;
 }
 
-.comentario {
+
+/*comentarios*/
+
+.comment-section {
+  color: #fff;
   width: 858px;
-  height: 172px;
-  background-color: #686868;
-  margin-top: 30px;
+  margin: auto;
+  margin-top: 5rem;
+  border-radius: 8px;
+  position: relative;
 }
-.titulo-comentario{
-  font-family: 'Roboto', 'Bold', sans-serif;
-  transition: background-color 0.3s ease;
-  color: #FFFFFF;
-  padding: 20px;
-  font-size: 18px ;
-  height: 47px;
 
+.comment-box {
+  background-color: #686868;
+  border-radius: 8px;
+  margin-bottom: 20px;
+  padding: 10px;
 }
+
+.user-info {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  width: fit-content;
+  margin-bottom: 10px;
+  color: #D3A1FF;
+}
+
+.user-icon {
+  font-size: 20px;
+  color: #D3A1FF;
+}
+
+.username {
+  font-weight: bold;
+  color: #FFFFFF;
+}
+
+.comment-box .linea-blanca, .comment .linea-blanca{
+  width: 100%;
+}
+
+textarea {
+  width: 100%;
+  height: 60px;
+  background-color: #686868;
+  color: #FFFFFF;
+  border: none;
+  border-radius: 4px;
+  padding: 10px;
+  margin-bottom: 10px;
+  resize: none;
+  font-size: 14px;
+}
+
+.rating-post {
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+}
+
+
+
+.comment-box .rating-stars{
+  position: absolute;
+  right: 1rem;
+  top: 1rem;
+}
+
+.rating-stars span {
+  color: #474765; /* Estrellas no seleccionadas */
+  font-size: 20px;
+  margin-right: 2px;
+}
+
+.rating-stars span.active {
+  color: #FFDF00; /* Estrellas seleccionadas */
+}
+
+.comment-section .fa-circle-user {
+  font-size: 30px;
+}
+
+.post-button {
+  background-color: #A566FF;
+  color: #fff;
+  border: none;
+  padding: 8px 12px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bold;
+  margin-left: auto;
+}
+
+.comment {
+  position: relative;
+  background-color: #686868;
+  padding: 15px;
+  border-radius: 8px;
+  margin-bottom: 15px;
+}
+
+.comment .rating-stars{
+  position: absolute;
+  right: 1rem;
+  top: 1rem;
+}
+
+.comment p {
+  margin: 10px 0;
+  font-size: 14px;
+  color: #E0E0E0;
+}
+
+.comment-section h3 {
+  color: #FFFFFF;
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 15px;
+  display: flex;
+  align-items: center;
+}
+
+.comment .rating-stars span {
+  color: #FFDF00; /* Estrellas de calificación en los comentarios */
+  font-size: 20px;
+  margin-right: 2px;
+}
+.comment .rating-stars span.gr {
+  color: #474765; /* Estrellas de calificación en los comentarios */
+}
+.comment-section hr{
+  margin-bottom: 1rem;
+  border: none;
+  border-top: 2px solid #777474;
+}
+
+/*fin comentarios*/
+
+
 
 .invisible{
   display: none;
 }
-
+.cart-icon i.hidden{
+  display: none;
+}
 
 /*Breakpoint Desktop*/
   @media (min-width: 1024px) {
@@ -711,38 +865,74 @@
     }
 
     /*footer*/
-    .footer {
-      margin-top: 10rem;
-      display: flex;
-      justify-content: space-between;
-      padding: 20px;
+    footer {
+      margin-top: 160px;
       background-color: #59595B;
-      color: #ffffff;
-      bottom: 0;
-      left: 0;
+      display: flex;
+      justify-content: center;
+      align-content: end;
+      position:relative;
+      display: grid;
       width: 100%;
+      height: auto;
+      padding: 50px 100px;
   }
-  
-  .footer-column {
-      flex: 1;
-      margin: 10px 20px;
+
+  .container-footer{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-gap: 50px;
+    grid-column-gap: 100px;
   }
-  
-  .footer-column ul {
-      list-style-type: disc; /* Agrega puntos a las listas */
-      padding-left: 20px; /* Espacio de indentación para las listas */
+  footer .container-footer .sec h2{
+    position: relative;
+    font-family: 'Roboto';
+    color: #FFFFFF;
+    font-weight: 600;
+    margin-bottom: 15px;
   }
-  
-  .footer-column li {
-      margin-bottom: 10px; /* Espacio entre elementos de la lista */
+
+  footer .container-footer .social-links{
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: repeat(4,50px);
   }
-  
-  .footer-column > ul > li {
-      font-weight: bold; /* Títulos en negrita */
-      margin-bottom: 15px; /* Espacio entre el título y los elementos de la lista */
+  footer .container-footer .social-links a{
+    font-size: 28px;
+    text-decoration: none;
+    align-content: center;
+    justify-content: center;
+    display: grid;
+    color: #9370DB;
   }
-  .footer-column h2 {
-    margin-bottom: 10px; /* Espacio entre el título y la lista */
+  footer .container-footer .social-links a:hover{
+    color: #FFFFFF;
+  }
+
+  footer .container-footer li{
+    list-style: none;
+  }
+  footer .container-footer li a{
+    text-decoration: none;
+    color: #d2c9c9;
+    display: inline-block;
+    margin-bottom: 10px;
+    transition: .5s;
+  }
+  footer .container-footer li a:hover{
+    color:#FFFFFF
+  }
+  footer .container-footer .links{
+    position: relative;
+  }
+
+  .Copyright{
+    width: 100%;
+    background-color: #59595B;
+    padding: 20px 100px 30px;
+    text-align: center;
+    color: #d2c9c9;
   }
     /*footer*/
   }
